--- a/3/3-main.html
+++ b/3/3-main.html
@@ -8,7 +8,7 @@
     
 <body>
     <header>
-        <img src="logo.png" alt="LOGO">
+        <img src="img/logo.png" alt="LOGO">
     </header>
     <div class="row">
         <a href="3_sycylia.html" style="color:ghostwhite; font-size:20px; font-style:oblique;"><div class="sel">SYCYLIA</div></a>
