--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-<title>main</title>
 <meta lang="pl" charset="utf-8">
+    <title>home</title>
 <style>
 	body {
 		background-color:floralwhite;
